[gd_scene load_steps=6 format=3 uid="uid://bbktup7aqkg82"]

[ext_resource type="Script" path="res://scripts/interface builders/BarrierAnimation.gd" id="1_rwghh"]
[ext_resource type="Texture2D" uid="uid://cjseyh6xjjr08" path="res://assets/sprites/vfx/static effects/Barrier.png" id="2_6ryyt"]

[sub_resource type="Animation" id="Animation_xr5hl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Barrier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6fhde"]
resource_name = "action"
length = 1.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Barrier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6ab6"]
_data = {
"RESET": SubResource("Animation_xr5hl"),
"action": SubResource("Animation_6fhde")
}

[node name="BarrierAnimation" type="Node2D" node_paths=PackedStringArray("barrier", "animator", "restart")]
script = ExtResource("1_rwghh")
barrier = NodePath("Barrier")
animator = NodePath("Anime")
restart = NodePath("RestartAnimation")

[node name="Barrier" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.701961)
texture = ExtResource("2_6ryyt")
hframes = 14

[node name="Anime" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c6ab6")
}

[node name="RestartAnimation" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="Anime" to="." method="animeFinished"]
[connection signal="timeout" from="RestartAnimation" to="." method="restartAnimation"]
